<resources>
    <string name="app_name">SistemaDeEncuestas</string>
    <string name="tittle_activity_intento">Gestionar Intento</string>
    <string name="button">Crear Encuesta</string>
    <string name="button2">Lista De Encuestas</string>
    <string name="button3">Responder Encuesta</string>
    <string name="TextView">Seleccionar opcion </string>
    <string name="TextView7">idDocente </string>
    <string name="TextView8">nomDocente </string>
    <string name="TextView9"> </string>
    <string name="button4">Regresar</string>
    <string name="button5">listar pregunta</string>
    <string name="button6">modificar pregunta</string>
    <string name="button7">Gestion De Preguntas</string>
    <string name="button8">Gstion De Materia</string>
    <string name="button9">Gestion De Docente</string>
    <string name="button10">Añadir pregunta</string>
    <string name="button11">eliminar pregunta</string>
    <string name="button12">Regresar</string>
    <string name="button13">Regresar</string>
    <string name="button15">Eliminar Encuesta</string>
    <string name="button16">Modificar Encuesta</string>
    <string name="button17">buscar Encuesta</string>
    <string name="button18">Ingresar</string>
    <string name="button19">Modificar</string>
    <string name="button20">Buscar</string>
    <string name="button21">Eliminar</string>
    <string name="button22">Cancelar</string>
    <string name="cancelar">Cancelar</string>
    <string name="insertar">Insertar</string>
    <string name="consultar">Consultar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="tittle_activity_intento_insertar">Insertar Intento</string>
    <string name="tittle_activity_intento_consultar">Consultar Intento</string>
    <string name="tittle_activity_intento_actualizar">Actualizar Intento</string>
    <string name="tittle_activity_intento_eliminar">Eliminar Intento</string>
    <string name="tittle_activity_materia">Gestionar Materia</string>
    <string name="tittle_activity_materia_insertar">Insertar Materia</string>
    <string name="tittle_activity_materia_consultar">Consultar Materia</string>
    <string name="tittle_activity_materia_actualizar">Actualizar Materia</string>
    <string name="tittle_activity_materia_eliminar">Eliminar Materia</string>
    <string name="tittle_activity_respuesta">Gestionar Respuesta</string>
    <string name="tittle_activity_respuesta_insertar">Insertar Respuesta</string>
    <string name="tittle_activity_respuesta_consultar">Consultar Respuesta</string>
    <string name="tittle_activity_respuesta_actualizar">Actualizar Respuesta</string>
    <string name="tittle_activity_respuesta_eliminar">Eliminar Respuesta</string>
    <string name="idAsignatura">ID Asignatura</string>
    <string name="codAsignatura">Código</string>
    <string name="nomAsignatura">Nombre de asignatura</string>
    <string name="limpiar">Limpiar</string>
    <string name="idIntento">ID Intento</string>
    <string name="idAlumno">ID alumno</string>
    <string name="idEncuestado">ID Encuestado</string>
    <string name="idClave">ID Clave</string>
    <string name="idRespuesta">ID Respuesta</string>
    <string name="idOpPregunta">ID Opciones Pregunta</string>
    <string name="gestion_de_respuestas">GESTION DE RESPUESTAS</string>
    <string name="gestion_de_intentos">GESTION DE INTENTOS</string>
</resources>
