<?xml version="1.0" encoding="utf-8"?>
<android.widget.ListView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RespuestaActivity">

    <Button
        android:id="@+id/insertarRespuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Insertar"
        android:text="@string/insertar" />

    <Button
        android:id="@+id/ConsultarRespuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Consultar"
        android:text="@string/consultar" />

    <Button
        android:id="@+id/ActualizarRespuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Actualizar"
        android:text="@string/actualizar" />

    <Button
        android:id="@+id/eliminarRespuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Eliminar"
        android:text="@string/eliminar" />

    <Button
        android:id="@+id/regresarMenuRespuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Cancelar"
        android:text="@string/cancelar" />

</android.widget.ListView>