<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RespuestaConsultarActivity">

    <TextView
        android:id="@+id/tIdRespuestaCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idRespuesta" />

    <EditText
        android:id="@+id/editIdRespuestaCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tIdIntentoResCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idIntento" />

    <EditText
        android:id="@+id/editIdIntentoResCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tIdOpPregResCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idOpPregunta" />

    <EditText
        android:id="@+id/editIdOpPregResCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"/>

    <Button
        android:id="@+id/RespuestaConsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Consultar"
        android:text="@string/consultar" />

    <Button
        android:id="@+id/RespuestaLimpiarCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Limpiar"
        android:text="@string/limpiar" />

</android.widget.LinearLayout>